<resources>
    <string name="app_name">XIM Wallet</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="start">START</string>
    <string name="cancel">CANCEL</string>
    <string name="finish">FINISH</string>
    <string name="ok">OK</string>
    <string name="copy">COPY</string>
    <string name="yes">YES</string>
    <string name="cont">CONTINUE</string>
    <string name="address_clipboard_label">Stellar Account Address</string>
    <string name="address_copied_success_toast">Address copied to clipboard!</string>
    <string name="address_copied_failed_toast">Failed to copy address to clipboard</string>
    <string name="seed_clipboard_label">Stellar Account Seed</string>
    <string name="seed_copied_success_toast">Seed copied to clipboard!</string>
    <string name="seed_copy_failed_toast">Failed to copy seed to clipboard</string>
    <string name="asset_balance">%1$s %2$s</string>
    <string name="account_id_label">Account Address:</string>
    <string name="xim_asset_code">XIM</string>
    <string name="set_inflation">Set Inflation</string>
    <string name="refresh">Refresh</string>
    <string name="remove_account">Remove Account</string>
    <string name="remove_account_confirmation_title">Remove Account?</string>
    <string name="remove_account_confirmation_message">Are you sure you want to remove this account from Xim Wallet? This action cannot be undone.\n\nNote that your account and respective funds will remain intact. This merely removes the account access from the application. Please ensure that you have your account seed safely copied elsewhere.</string>
    <string name="navigate_account_failure">Failed to open account</string>
    <string name="load_accounts_failure">Failed to load accounts</string>
    <string name="remove_account_failure">Failed to remove account</string>
    <string name="account_address_prefix_error">Account address must start with "G"</string>
    <string name="account_address_length_error">Account address must be %d characters long</string>
    <string name="account_address_format_error">Invalid account address format</string>
    <string name="seed_prefix_error">Account seed must start with "S"</string>
    <string name="seed_length_error">Account seed must be %d characters long</string>
    <string name="seed_format_error">Invalid seed format</string>
    <string name="copy_address">Copy Address</string>
    <string name="view_full_address">View Full Address</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="import_account">Import Existing Account</string>
    <string name="login_with_export_id">Create free account with ExportID</string>
    <string name="fund_xim">Login with ExportId to fund XIM</string>
    <string name="fund_xim_message">You need at least %s Lumens (XLM) to activate this account.</string>
    <string name="welcome">Welcome to XIM Wallet</string>
    <string name="disclaimer">By using XIM Wallet you agree to our \"Terms and Conditions of Use\" and \"Privacy Policy\" found under the About section.</string>
    <string name="secure_title">Secure</string>
    <string name="secure_description">Locally encrypted account seeds. Authorize transactions before they happen.</string>
    <string name="simple_title">Simple</string>
    <string name="simple_description">Built for elegance and ease of use.</string>
    <string name="open_source_title">Open Source</string>
    <string name="open_source_description">Open sourced code for full transparency. Provided completely free of cost.</string>
    <string name="developer_title">A word from our humble developer</string>
    <string name="developer_description">Thanks for installing my app! If you enjoy it, please consider rating it in the Play Store or donating!</string>
    <string name="add_account_source_fragment_title">Add Account</string>
    <string name="new_to_xim_wallet_message">New to XIM Wallet?</string>
    <string name="account_source_message">Adding an account?</string>
    <string name="create_account_button">CREATE NEW ACCOUNT</string>
    <string name="import_account_button">IMPORT ACCOUNT</string>
    <string name="import_seed_fragment_title">Import Seed</string>
    <string name="seed_warning_bullet2_import">Copy this seed somewhere very safe.</string>
    <string name="seed_hint">Account Seed</string>
    <string name="xim_trust_loading_message">Checking XIM Trust</string>
    <string name="generate_seed_fragment_title">Generate Seed</string>
    <string name="seed_message">Here is your account \"seed\". For all intents and purposes, your seed represents the entirety of your Stellar account.</string>
    <string name="seed_warning_header">WARNING:</string>
    <string name="seed_warning_bullet1">Do not share your seed with anyone.</string>
    <string name="seed_warning_bullet2_generate">View and copy this seed somewhere very safe.</string>
    <string name="seed_warning_bullet3">Xim Wallet makes no guarantee of keeping this for you under any circumstances. If you do not retain your seed, you risk losing access to your account and funds.</string>
    <string name="seed_warning_bullet4">We will encrypt this seed using a passphrase you provide in the next step.</string>
    <string name="auto_trust_xim_bullet">We will automatically set your account up for XIM.</string>
    <string name="show_seed">SHOW SEED</string>
    <string name="copy_seed">COPY SEED</string>
    <string name="generate_different_seed">GENERATE DIFFERENT SEED</string>
    <string name="encrypt_seed_fragment_title">Set Passphrase</string>
    <string name="encryption_message">You will now enter a passphrase to encrypt your account seed with.</string>
    <string name="encryption_message_bullet1">This allows us to safely store your seed on your device.</string>
    <string name="encryption_message_bullet2">You will need to enter this passphrase before completing any transactions.</string>
    <string name="encryption_message_bullet3">Forgetting this is not an issue! You can always recover your account with the account seed.</string>
    <string name="encryption_message_bullet4">We will never store your passphrase on the device.</string>
    <string name="encryption_message_bullet5">This particular passphrase you enter will be tied specifically to the account seed imported or generated in the previous step.</string>
    <string name="encryption_message_bullet6">Your passphrase must be 8 to 20 characters long. It is case-sensitive.</string>
    <string name="initial_password_field_hint">Password</string>
    <string name="verify_password_field_hint">Verify Password</string>
    <string name="password_length_error">Passphrase must be at least 8 characters long</string>
    <string name="passwords_match_error">Passwords don\'t match</string>
    <string name="date_label">Date:</string>
    <string name="operation_type_label">Action Performed:</string>
    <string name="memo_label">Memo:</string>
    <string name="recipient_label">Recipient:</string>
    <string name="sender_label">Sender:</string>
    <string name="receive_amount_prefix">+%1$s %2$s</string>
    <string name="send_amount_prefix">-%1$s %2$s</string>
    <string name="failed_load_transactions">Failed to load transactions</string>
    <string name="trustee_label">Trustee:</string>
    <string name="trustor_label">Trustor:</string>
    <string name="asset_label">Asset:</string>
    <string name="offer_id_label">Offer Id:</string>
    <string name="selling_asset_code_label">Sell Asset Code:</string>
    <string name="buying_asset_code_label">Buy Asset Code:</string>
    <string name="selling_amount_label">Selling Amount:</string>
    <string name="buying_price_label">Buying Price:</string>
    <string name="merged_into_label">Merged Into:</string>
    <string name="entry_name_label">Entry Name:</string>
    <string name="entry_value_label">Entry Value:</string>
    <string name="recipient_hint">Recipient Address</string>
    <string name="amount_hint">Amount</string>
    <string name="memo_hint">Memo (Optional)</string>
    <string name="invalid_ascii">Invalid ASCII Character</string>
    <string name="loading_building_transaction">Building Transaction&#8230;</string>
    <string name="build_transaction_fail">Transaction Build Failure</string>
    <string name="loading_sending_payment">Posting Transaction&#8230;</string>
    <string name="send_payment_fail">Transaction Failed</string>
    <string name="send_payment_success">Transaction Successful!</string>
    <string name="account_address_same_as_self_error">This is the same as the sending address</string>
    <string name="account_address_not_exist_error">Account does not exist, create a new account by sending XLM first</string>
    <string name="account_address_unsupported_asset_error">Receiving account does not trust this asset</string>
    <string name="insufficient_funds_error">Insufficient funds</string>
    <string name="amount_greater_than_zero_error">Amount must be greater than zero</string>
    <string name="send_payment_title">Payment Confirmation</string>
    <string name="create_account_title">Create Account Confirmation</string>
    <string name="confirm_transaction">CONFIRM TRANSACTION</string>
    <string name="sending_label">Sending:</string>
    <string name="to_label">To:</string>
    <string name="transaction_fees">Transaction Fee:</string>
    <string name="remaining_balances">Remaining Balances:</string>
    <string name="self_account_balance_violated">Your account must retain a minimum balance of %1$s.</string>
    <string name="new_account_balance_violated">The new account must be sent a minimum balance of %1$s.</string>
    <string name="contact_list_fragment_title">Contacts</string>
    <string name="contacts_load_error_message">Failed to load contacts</string>
    <string name="contacts_empty_message">No contacts found</string>
    <string name="contact_address_empty">(No Address)</string>
    <string name="contact_notes_empty">(No Notes)</string>
    <string name="view_contact_fragment_title">View Contact</string>
    <string name="delete_contact_confirmation_title">Delete?</string>
    <string name="delete_contact_message">Are you sure you want to delete this contact?</string>
    <string name="contact_load_error_message">Failed to load contact</string>
    <string name="contact_delete_error_message">Failed to delete contact</string>
    <string name="contact_notes_label">Notes:</string>
    <string name="contact_menu_edit">Edit</string>
    <string name="contact_menu_delete">Delete</string>
    <string name="edit_contact_fragment_title">Edit Contact</string>
    <string name="inflation_hint">Inflation Destination</string>
    <string name="set_inflation_destination">Set Inflation Destination</string>
    <string name="populate_lumenaut_inflation">Copy Lumenaut Inflation Address</string>
    <string name="inflation_description_title">What is Inflation?</string>
    <string name="inflation_description">A mechanism to distribute new Lumens, on a weekly basis, at a rate of 1% per year to existing holders. By not setting a destination, you are in essence, missing out on free Lumens.</string>
    <string name="lumenaut_description_title">Lumenaut Community Pool?</string>
    <string name="lumenaut_description">Inflation is distributed via a voting system, where only those with 0.5% of the total votes can receive the new Lumens. In order to meet this requirement, you can join a pool, such as Lumenaut, to still participate. Lumenaut is Xim Wallet\'s preferred choice, as they have zero fees, 100% payout, and is supported by the very same community which uses it.</string>
    <string name="inflation_confirmation_title">Set Inflation Confirmation</string>
    <string name="inflation_destination_label">Inflation Destination:</string>
    <string name="trust_xim_message">Enter your account password to finish setting up your account.</string>
</resources>