<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/seed_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seed_message" />

        <TextView
            android:id="@+id/warning_header"
            style="@style/WarningHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/seed_warning_header" />

        <TextView
            android:id="@+id/warning_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:textStyle="bold"
            tools:text="Warning Item 1 \n Warning Item 2 \n Warning Item 3" />

        <Button
            android:id="@+id/btn_show_seed"
            style="@style/RaisedButton"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/show_seed" />

        <TextView
            android:id="@+id/seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:visibility="gone"
            app:fontFamily="@font/string_literal"
            tools:text="NOTAREALSEED" />

        <Button
            android:id="@+id/btn_copy_seed"
            style="@style/RaisedButtonSecondary"
            android:layout_width="match_parent"
            android:text="@string/copy_seed"
            android:theme="@style/RaisedButtonSecondaryTheme"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_generate_new_seed"
            style="@style/RaisedButtonSecondary"
            android:layout_width="match_parent"
            android:text="@string/generate_different_seed"
            android:theme="@style/RaisedButtonSecondaryTheme"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_next"
            style="@style/RaisedButton"
            android:layout_width="match_parent"
            android:text="@string/next"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>