<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/inflation_confirmation_title"
            android:textColor="@color/colorAccentLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="start"
            android:text="@string/inflation_destination_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inflation_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:fontFamily="@font/string_literal"
            tools:text="NOTAREALADDRESS" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="start"
            android:text="@string/transaction_fees"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            tools:text=".001 XLM" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/initial_password_field_hint"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/confirm_button"
            style="@style/RaisedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:enabled="false"
            android:text="@string/confirm_transaction" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/RaisedButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:theme="@style/RaisedButtonSecondaryTheme" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>